@@ -1,7 +1,8 @@
 package com.jumbo.store.geo.controller;
 
 import com.jumbo.store.geo.controller.dto.NearestStoreRequest;
-import com.jumbo.store.geo.controller.dto.StoreDTO;
+import com.jumbo.store.geo.controller.dto.StoreDTOMapper;
+import com.jumbo.store.geo.controller.dto.StoresResult;
 import com.jumbo.store.geo.service.StoreService;
 
 import io.swagger.v3.oas.annotations.Operation;
@@ -13,7 +14,7 @@ import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
 
 import jakarta.validation.Valid;
-import java.util.List;
+import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/api/v1")
@@ -21,19 +22,23 @@ import java.util.List;
 @Tag(name = "Store API", description = "API for managing stores and their locations")
 public class StoreController {
 
- 
     private final StoreService storeService;
-    public StoreController(StoreService storeService) {
+    private final StoreDTOMapper storeDTOMapper;
+
+    public StoreController(StoreService storeService, StoreDTOMapper storeDTOMapper) {
         this.storeService = storeService;
+        this.storeDTOMapper = storeDTOMapper;
     }
 
     @GetMapping("/nearest-stores")
     @Operation(summary = "Get nearest stores", description = "Returns the 5 closest stores to the given latitude and longitude")
-    public List<StoreDTO> getNearestStores(@Valid NearestStoreRequest request) {
 
-        return storeService.getNearestStores(request.latitude(), request.longitude()).stream()
-                .map(StoreDTO::fromStore)
-                .toList();
+    public StoresResult getNearestStores(@Valid NearestStoreRequest request) {
+
+        return StoresResult.builder().stores(
+                storeService.getNearestStores(request.latitude(), request.longitude()).stream()
+                        .map(storeDTOMapper::toDTO).collect(Collectors.toList()))
+                .build();
 
     }
 }
